# cjasm

./: .gitignore  CMakeLists.txt  valgrind.sup
.github/workflows/: cjasm.yaml  linux.yaml  macos.yaml  windows.yaml
include/: cjasm.h
src/: annotation.c  annotation.h  attribute.c  attribute.h  cjasm.c  class.c  class.h  code.c  code.h  cpool.c  cpool.h  def.h  descriptor.c  descriptor.h  field.c  field.h  mem_buf.c  mem_buf.h  method.c  method.h  util.c  util.h
test/: load_bytecode.c  mem_buf_rw.c  simple_decompiler.c  write_bytecode.c
test/resources/: Test.java  demo.txt
